--- a/index.html
+++ b/index.html
@@ -6,45 +6,56 @@
     <title>Professional Profile - Muhanad Al-Khasawneh</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
-            color: #333;
+            background-color: #e9ecef;
+            color: #343a40;
         }
         .container {
-            max-width: 1200px;
+            max-width: 1000px;
             margin: auto;
             padding: 20px;
         }
         header {
-            background-color: #0056b3;
+            background-color: #007bff;
             color: #ffffff;
-            padding: 20px;
+            padding: 40px;
             text-align: center;
+            border-radius: 0 0 15px 15px;
+        }
+        header img {
+            border-radius: 50%;
+            margin-top: 10px;
         }
         nav {
             background-color: #343a40;
             color: #ffffff;
+            overflow: hidden;
             padding: 10px;
-            text-align: center;
         }
         nav a {
             color: #ffffff;
             text-decoration: none;
-            margin: 0 10px;
+            margin: 0 15px;
+            display: inline-block;
+            padding: 10px 20px;
+        }
+        nav a:hover {
+            background-color: #007bff;
+            border-radius: 5px;
         }
         section {
             margin: 20px 0;
             padding: 20px;
             background-color: #ffffff;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
         section h2 {
             margin-top: 0;
             font-size: 24px;
-            color: #0056b3;
+            color: #007bff;
         }
         section ul {
             padding: 0;
@@ -58,6 +69,23 @@
             color: #ffffff;
             text-align: center;
             padding: 20px 0;
+            margin-top: 20px;
+            border-radius: 15px 15px 0 0;
+        }
+        .additional-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .additional-info div, .additional-info canvas {
+            flex: 1;
+            margin: 10px;
+            padding: 20px;
+            background-color: #f8f9fa;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
     </style>
 </head>
@@ -148,12 +176,14 @@
         <section id="projects">
             <h2>Additional Projects and Information</h2>
             <p><a href="waph.html" target="_blank">Web Application Programming and Hacking Course Projects</a></p>
-            <div id="digit-clock"></div>
-            <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+            <div class="additional-info">
+                <div id="digit-clock"></div>
+                <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+            </div>
             <script src="https://waph-uc.github.io/clock.js"></script>
             <script>
                 function displayTime() {
-                    document.getElementById('digit-clock').innerHTML = "Current time: " + new Date();
+                    document.getElementById('digit-clock').innerHTML = "Current time: " + new Date().toLocaleTimeString();
                 }
                 setInterval(displayTime, 500);
 
@@ -189,5 +219,3 @@
     </footer>
 </body>
 </html>
-
-
