--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             align-items: center;
             flex-wrap: wrap;
         }
-        .additional-info div, .additional-info canvas {
+        .additional-info div, .additional-info canvas, .additional-info iframe {
             flex: 1;
             margin: 10px;
             padding: 20px;
@@ -179,6 +179,7 @@
             <div class="additional-info">
                 <div id="digit-clock"></div>
                 <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+                <iframe src="https://s01.flagcounter.com/count2/Bsxo/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" frameborder="0" scrolling="no" style="width: 200px; height: 150px;"></iframe>
             </div>
             <script src="https://waph-uc.github.io/clock.js"></script>
             <script>
