--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
                     }
                 });
             </script>
+            <div id="response"></div>
+            <input name="data" id="data">
+            <button class="btn btn-primary" onclick="guessAge($('#data').val())">Guess Age</button>
+
+            <div id="flagcounter">
+                <a href="https://info.flagcounter.com/aIa1" target="_blank">
+                    <img src="https://s11.flagcounter.com/count2/yn5s/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0">
+                </a>
+            </div>
+
         </section>
     </div>
 
