--- a/waph.html
+++ b/waph.html
@@ -8,28 +8,28 @@
         <h1>Web Application Programming and Hacking</h1>
         <h2>Front-end Web Development Lab</h2>
         <h3>Instructor: Dr. Phu Phung</h3>
-        <h3>Student: Muhanad Al-Khasawneh</h3>
+        <h3>Student: Muneer Al-Khasawneh</h3>
         <p>A simple HTML page</p>
-        Using the <a href="https://ww.w3schools.com/html" target = "_blank"> W3Schools template</a>
-        
+        Using the <a href="https://www.w3schools.com/html" target = "_blank"> W3Schools template</a>
+
 
         <div class="section">
             <h2>About</h2>
-            <p>
-                <!-- Edit this section with details about the course, your experiences, and other relevant information -->
-                In this cource we are learing the Front-end using Ubuntu using the languages C and Java-Script. we are learing to make html files and how to operate the websites and add cool fuetuers onto the website like a clock and our email, we also had added jokes on the website.
+            <p>In this course, students will study basic web application development with front-end
+                (HTML5, JavaScript, CSS) and back-end (PHP/MySQL). Web application vulnerabilities and 
+                attacks will be introduced and explored with hands-on exercises on the range. Secure programming principles 
+                and practices will be introduced to avoid potential web application vulnerabilities and attacks.
             </p>
         </div>
 
         <div class="section">
-            <h2>Projects and Assignments</h2>
+            <h2>Projects and Assignments Completed Thus Far!</h2>
             <ul>
-                <!-- Add your projects and assignments here -->
-                <li>Project 1: Front-end Web Development with Personal Profile Website</li>
-                <li>Project 2: Interactive Web Application with API Integration</li>
-                <li>Assignment 1: HTML and CSS Basics</li>
-                <li>Assignment 2: JavaScript and jQuery</li>
-                <li>Assignment 3: API Usage and AJAX</li>
+                <li>Lab-0: Development & Environment Setup</li>
+                <li>Lab-1: Foundations of The Web</li>
+                <li>Lab-2: Front-end Web Development</li>
+                <li>Hackathon-1: Cross-site Scripting Attacks & Defenses</li>
+                <li>Project-1: Front-end Web Development with a Professional Profile Website on github.io cloud service</li>
             </ul>
         </div>
     </div>
