--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <img src="headshot.jpg" alt="My headshot" width="150">
         <p>Web Application Programming and Hacking</p>
         <p>Student: Muhanad Al-Khasawneh</p>
-        <p>Email: <span id="email" onclick="showhideEmail()">Show my email</span></p>
+        <p>Email: <span id="email" onclick="showhideEmail()">alkhasmr@mail.uc.edu</span></p>
     </header>
     
     <nav>
@@ -110,27 +110,26 @@
     <div class="container">
         <section id="profile">
             <h2>Profile</h2>
-            <p>Insert your profile content here.</p>
+            <p>![Insert your profile content here.](profilepicresize.jpg)</p>
         </section>
 
         <section id="education">
             <h2>Education</h2>
             <ul>
-                <li><strong>Bachelor of Science in Computer Science</strong>, University Name (Graduation Year)</li>
-                <li><strong>Master of Science in Software Engineering</strong>, University Name (Graduation Year)</li>
+                <li><strong>Bachelor of Science in Computer Science</strong>, University of Cincinnati (Graduation Year: 2026)</li>
             </ul>
         </section>
 
         <section id="experience">
             <h2>Experience</h2>
             <ul>
-                <li><strong>Software Developer</strong>, Company Name (Start Year - End Year)
+                <li><strong>Software Developer</strong>
                     <ul>
                         <li>Developed and maintained web applications using JavaScript, HTML, and CSS</li>
                         <li>Collaborated with cross-functional teams to deliver high-quality software products</li>
                     </ul>
                 </li>
-                <li><strong>Intern</strong>, Another Company (Start Year - End Year)
+                <li><strong>Intern</strong>
                     <ul>
                         <li>Assisted in the development of a mobile application using React Native</li>
                         <li>Conducted code reviews and provided feedback to junior developers</li>
@@ -168,8 +167,7 @@
             </ul>
             <h3>Certificates</h3>
             <ul>
-                <li><strong>Certified JavaScript Developer</strong>, Issuing Organization (Year)</li>
-                <li><strong>Professional Scrum Master</strong>, Issuing Organization (Year)</li>
+                <li><strong>Certified Cyber Security</strong>, EEP (2024)</li>
             </ul>
         </section>
 
