--- a/waph.html
+++ b/waph.html
@@ -8,7 +8,7 @@
         <h1>Web Application Programming and Hacking</h1>
         <h2>Front-end Web Development Lab</h2>
         <h3>Instructor: Dr. Phu Phung</h3>
-        <h3>Student: Muneer Al-Khasawneh</h3>
+        <h3>Student: Muhanad Al-Khasawneh</h3>
         <p>A simple HTML page</p>
         Using the <a href="https://www.w3schools.com/html" target = "_blank"> W3Schools template</a>
 
