--- a/index.html
+++ b/index.html
@@ -207,15 +207,20 @@
                 });
 
                 async function fetchWeather() {
-                    const response = await fetch('https://api.weatherbit.io/v2.0/current?city=Cincinnati,OH&key=2882c9ce0095430fbfd70980bc1b58f2');
-                    const data = await response.json();
-                    const weather = data.data[0];
-                    document.getElementById('weather').innerHTML = `Current weather in ${weather.city_name}: ${weather.temp}°C, ${weather.weather.description}`;
+                    try {
+                        const response = await fetch('https://api.weatherbit.io/v2.0/current?city=Cincinnati,OH&key=2882c9ce0095430fbfd70980bc1b58f2');
+                        const data = await response.json();
+                        console.log(data);  // Debugging line
+                        const weather = data.data[0];
+                        document.getElementById('weather').innerHTML = `Current weather in ${weather.city_name}: ${weather.temp}°C, ${weather.weather.description}`;
+                    } catch (error) {
+                        console.error('Error fetching weather data:', error);  // Error handling
+                        document.getElementById('weather').innerHTML = 'Error fetching weather data';
+                    }
                 }
 
                 document.addEventListener("DOMContentLoaded", function() {
                     fetchWeather();
                 });
             </script>
-            <div id="weather" style="margin-top: 20px; padding: 10px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);"></div>
-        </section>
+            <div id="weather" style="margin-top: 20px; padding: 10px; background-color: #ffffff; border-radius:
