--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
                 async function fetchWeather() {
                     try {
                         const response = await fetch('https://api.weatherbit.io/v2.0/current?city=Cincinnati,OH&key=2882c9ce0095430fbfd70980bc1b58f2');
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok ' + response.statusText);
+                        }
                         const data = await response.json();
                         console.log(data);  // Debugging line
                         const weather = data.data[0];
@@ -223,4 +226,4 @@
                     fetchWeather();
                 });
             </script>
-            <div id="weather" style="margin-top: 20px; padding: 10px; background-color: #ffffff; border-radius:
+            <div id="weather" style="margin-top: 20px; padding: 10px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 2px 4px
