--- a/index.html
+++ b/index.html
@@ -87,21 +87,6 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
-        #weather {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        #weather img {
-            width: 50px;
-            height: 50px;
-        }
     </style>
 </head>
 <body>
@@ -190,7 +175,6 @@
                 <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
                 <iframe src="https://s01.flagcounter.com/count2/Bsxo/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" frameborder="0" scrolling="no" style="width: 200px; height: 150px;"></iframe>
             </div>
-            <div id="weather"></div>
             <script src="https://waph-uc.github.io/clock.js"></script>
             <script>
                 function displayTime() {
@@ -223,8 +207,15 @@
                 });
 
                 async function fetchWeather() {
-                    try {
-                        const response = await fetch('https://api.weatherbit.io/v2.0/current?city=Cincinnati,OH&key=2882c9ce0095430fbfd70980bc1b58f2');
-                        const data = await response.json();
-                        const weather = data.data[0];
-                        const weatherIconUrl = `https://www.weatherbit.io/static/img/icons/${weather.weather.icon
+                    const response = await fetch('https://api.weatherbit.io/v2.0/current?city=Cincinnati,OH&key=2882c9ce0095430fbfd70980bc1b58f2');
+                    const data = await response.json();
+                    const weather = data.data[0];
+                    document.getElementById('weather').innerHTML = `Current weather in ${weather.city_name}: ${weather.temp}°C, ${weather.weather.description}`;
+                }
+
+                document.addEventListener("DOMContentLoaded", function() {
+                    fetchWeather();
+                });
+            </script>
+            <div id="weather" style="margin-top: 20px; padding: 10px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);"></div>
+        </section>
